# ai-cv-parsing-python

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
cv-evaluation-service-fastapi/: main.py  pyproject.toml
k8s/: README.md  app-job.yaml  app-service.yaml  ollama-configmap.yaml  ollama-deployment.yaml  ollama-service.yaml
src/ai_cv_parsing/: __init__.py  main.py
src/ai_cv_parsing/routes/: cvs.py
src/ai_cv_parsing/utils/: file_reader.py  llm_analyzer.py  pdf_extractor.py
